# dsm2

./: .cmake-format.yml  .gitignore  404.html  CMakeLists.txt  COPYRIGHT.txt  CmakeLibraryMacro.txt  CodingGuidelines.md  DSM2_GTM_Compiling_and_Packaging.docx  DSM2_documentation.lnk  DSM2_v8_0_Compiling_and_Packaging.docx  LICENSE.txt  README.md  auth_testing.txt  build.out  build_all.bat  build_all.sh  build_all_hpc4.sh  build_dsm2_vs2015_32b.bat  build_gtm.sh  build_hpc4.sh  build_linux.sh  build_ninja.bat  build_win.bat  build_win_dms.bat  draft_Memo_DSM2_v805_Compiling_and_Packaging.docx  draft_Memo_DSM2_v8_Compiling_and_Packaging.docx  heclib_vs9.lib  how_to_build.md  hpc4options.cmake  index.html  linux_options.cmake  mkdocs.yml  oprule_parser_vs9_mt.lib  oprule_vs9_mt.lib  setup_linux_intelcompilers_32bit.sh  setup_linux_intelcompilers_32bit_hpc4.sh  sitemap.xml  todo_v8_release.txt  win_options.cmake
dsm2/: CMakeLists.txt  DSM2_v8_0_Compiling_and_Packaging.docx  README.txt  build_barebone.sh  build_barebone_64.sh  build_dsm2_vs2015_32b.bat  build_dsm2_vs2017_32b.bat  build_unix.sh  build_unix_dbg.sh  build_unix_hpc4.sh  dsm2.dsw
dsm2/build_vs2008/: debug_sdip.inp
dsm2/cmake/: FindHEClib.cmake  FindKLU.cmake
dsm2/common_input/: boundary_flow_calsim_delta.inp  boundary_flow_delta_historical.inp  boundary_flow_delta_historical_20090715.inp  boundary_flow_jones_hydro.inp  boundary_flow_jones_hydro_090630.inp  boundary_stage_adjust_astro_tide.inp  boundary_stage_adjust_astro_tide_20090715_NAVD.inp  boundary_stage_delta_historical.inp  boundary_stage_delta_historical_20090715_NAVD.inp  channel_historical_stability_revision.inp  channel_std_delta_grid_20090715.inp  channel_std_delta_grid_NAVD_20121214.inp  channel_tapered_tracy_blvd_dredge_20090715.inp  channel_tapered_tracy_blvd_dredge_20090715_NAVD.inp  gate_permanent_barriers.inp  gate_permanent_barriers_20090715.inp  gate_permanent_barriers_20090806.inp  gate_std_delta_grid_20090806.inp  gate_std_delta_grid_20090827.inp  gate_std_delta_grid_20100330.inp  gate_std_delta_grid_NAVD_20121214.inp  gate_temp_barriers_20090806.inp  gate_temp_barriers_20090827.inp  group_rate_coeff_groups_090630.inp  group_rate_coeff_groups_20090715.inp  group_rate_coeff_groups_20121214.inp  group_sourcetracking.inp  group_sourcetracking_090630.inp  input_climate_delta_historical_climate.inp  input_gate_planning_ccfb_dcc_timing.inp  input_gate_planning_ccfb_dcc_timing_20090715.inp  node_concentration_ag_delta_doc_090630.inp  node_concentration_calsim_delta_ec_20090715.inp  node_concentration_delta_historical_qual.inp  node_concentration_delta_historical_qual_20121214.inp  node_concentration_dicu_do_20090715.inp  node_concentration_dicu_ec.inp  node_concentration_jones_qual.inp  node_concentration_mtz_planning_ec_20090715.inp  node_concentration_source_volumetric_20090715.inp  (+55 more)
dsm2/doc/: DSM2_V812_release_note.txt
dsm2/html/: dsm2.css
dsm2/hydro/: bufout.inc  chconnec.inc  chcxrec2.inc  fourpt.f  hydro.dsp  hydro.dsw  hydro.opt  hydrolib.plg  solver_diagnostics.f  table3.f  tidefile.f  virtual_xsect.f
dsm2/install/: DSM2setup_Script_Generate.py  DSM2setup_v8.iss  DSM2setup_v8.template  DSM2setup_v8_simple.iss  How_to_install.docx  How_to_install.txt  checklist.txt  copy_hydro_qual_ptmDLL_notepad_style.bat  doc2pdf.vbs  generate_version.bat  infoFile.rtf  regsetup.iss
dsm2/license/: COPYRIGHT.txt
dsm2/modules/: constants.f
dsm2/notes/: CodeNotes.docx  DSM2 code notes - Copy.docx  DSM2 code notes.docx  Filter algorithm.docx  How Original PTM decide route selection.docx  How outflow inflow work in PTM.docx  How to implement travel time to particle swimming velocity.docx  How to use statistical models in PTM.docx  PTM data structures.docx  Particle class.docx  RussPerrySurvivalModel.docx  Short term works.docx  Swimming Survival code notes.docx  Things I want from Russ.docx  Things need to be done in the code.docx  code design.txt  how flows in case of dicu div efficiency calc.txt  how to use javah to create cpp header.docx  need to do now nodes.docx  non_physical_barrier_op_original.txt  particledispatcher.docx  swimming class design.docx  visitor pattern design.docx  ~$w to implement travel time to particle swimming velocity.docx  ~WRL0709.tmp
dsm2/presentations/: BT2_Reservoir_Gate_Transfer.ppt  Cool Tip template.ppt  DSM2 Delta Applications Intro.ppt  DSM2 Installation.pptx  DSM2 Operting Rule.ppt  DSM2 Version 8 Class Syllabus.docx  DSM2 analysis tools.ppt  DSM2 reservoirs and gates.ppt  DSM2V8 agenda 830 class.docx  DSM2V8 agenda 900 class.docx  DSM2V8Workshop_DSM2UG_Issues.pptx  DSM2_PTM.pptx  DSM2_V8.ppt  DSM2_class_list_830.docx  DSM2_class_list_900.docx  DeltaTutorial-Planning_PermanentBarriers.doc  Fingerprinting.ppt  SAC_SJR_FP_w_basemap_2.avi.REMOVED.git-id  Source_Tracking.ppt  a2_installation.pptx  a3_dsm2_user_group.pptx  a4_dsm2_version8.ppt  b1_channel.pptx  b2_reservoir_gate_transfer.ppt  b3_input_system_layering.pptx  b4_simulation_data.pptx  b5_source_tracking.ppt  b6_op_rule.ppt  d0_delta_applications.ppt  d1_historical.pptx  d1b_nonconservative.pptx  d2_ptm.pptx  d4_move_archive_batch.ppt  or1_op_rule.ppt  or2_sdip_oprules.ppt  p3_input_system_layering.pptx  p3b_input.pptx  p4_simulation_data.pptx
dsm2/previous_versions/: DSM2_v8.0_beta3_release.exe.REMOVED.git-id  DSM2setup_8.0.2.exe.REMOVED.git-id  DSM2setup_8.0.6_2021.exe.REMOVED.git-id
dsm2/ptm/: Globals.java  diversionFixedData.java  fluxMonitor.java  gRand48.java  innoSetup.iss  nodeFixedData.java  nodeFlux.java  particleFluxData.java  rArray.java  timeFixedData.java  typeFlux.java  waterbodyGroup.java
dsm2/qual/: bltminit.f  heat.f  qual.dsp  route.f  version.inc
dsm2/scripts/: config.py  dcc.py  dcc_new.py  dcc_old.py  dsm2.py  dsm2_tidy.py  dxc.py  ec_boundary.py  expand_seasonal.py  (+15 more)
input_storage/: CMakeLists.txt  GNUmakefile  README.CMAKE.md  README.CMAKE.txt  build_unix.sh  build_unix_hpc4.sh  build_vs2015_32b.bat
oprule/: CMakeLists.txt  README.CMAKE.md  build_unix.sh  build_unix_dbg.sh  build_unix_hpc4.sh  build_vs2015_32b.bat  makedoc.bat
(+5389 files in other folders)
